# libvmod-jq

./: .travis.yml  CHANGES.md  LICENSE  README.md  configure.ac
.github/workflows/: ci.yml
src/: Makefile.am  vmod_jq.c  vmod_jq.vcc
src/tests/: b00000.vtc  b00001.vtc
